<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_to_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="burles.brookes.ac.musicrec.AddToLibraryActivity">

    <Spinner android:id="@+id/search_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/edit_title"
        android:layout_below="@+id/search_spinner"
        android:hint="@string/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText android:id="@+id/edit_artist"
        android:layout_below="@+id/edit_title"
        android:hint="@string/search_artist_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText android:id="@+id/edit_album"
        android:layout_below="@+id/edit_artist"
        android:hint="@string/search_album_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button android:id="@+id/button_search"
        android:layout_below="@+id/edit_album"
        android:text="@string/button_search_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ListView android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_search"/>

</RelativeLayout>
